--- a/Kazakh_English_Translator_v3.ipynb
+++ b/Kazakh_English_Translator_v3.ipynb
@@ -15,6 +15,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+        "state": {},
         "6277c53c0eee4ad1bd44b88786a60e12": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
